src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Contract Management</fullName>
        <description>SFDC1-8125: Support process for Contract Management</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Care</fullName>
        <description>Main Case Record for Customer Care Cases;SFDC1-5541: Remove Delete and Duplicate values</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by 3rd Party</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by Customer</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by IHS Markit</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting - 3rd Party</fullName>
        </values>
        <values>
            <fullName>Waiting - Customer</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>GDSA</fullName>
        <description>SFDC1-7673 GDSA is to replace SalesForce Help record type for Data Governance case handling process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by Customer</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by IHS Markit</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Waiting - Customer</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Implementation</fullName>
        <description>SFDC1-7137: Adding support process for Implementation</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by IHS Markit</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting - 3rd Party</fullName>
        </values>
        <values>
            <fullName>Waiting - Customer</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Joiner%2FTransfer%2FLeaver</fullName>
        <description>SFDC1-6829 - Case Joiner Leaver Transfer Status Related process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by IHS Markit</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting - 3rd Party</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NRG</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active Waiting for info</fullName>
        </values>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Referral</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Referral</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Onboarding</fullName>
        <description>SFDC1-593 Support porcess for Onboarding</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by IHS Markit</fullName>
        </values>
        <values>
            <fullName>Connectivity</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Initial Delivery Complete</fullName>
        </values>
        <values>
            <fullName>Install Complete</fullName>
        </values>
        <values>
            <fullName>Live</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Testing</fullName>
        </values>
        <values>
            <fullName>Trial Approved</fullName>
        </values>
        <values>
            <fullName>User Access Granted</fullName>
        </values>
        <values>
            <fullName>Waiting - 3rd Party</fullName>
        </values>
        <values>
            <fullName>Waiting - Customer</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
        <values>
            <fullName>Welcome Package Sent</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Order Management</fullName>
        <description>SFDC1-7145: Adding support process for Order Management; SFDC1-7780: Changing status for Order managment. SFDC1-8780: Updating status as per war room story</description>
        <isActive>true</isActive>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Updated</fullName>
        </values>
        <values>
            <fullName>Validated</fullName>
        </values>
        <values>
            <fullName>Validated PO Pending</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Order Mgmt%2FDelivery Help Desk</fullName>
        <description>SFDC1-6148 : Support process for Order Mgmt/Delivery Help Desk</description>
        <isActive>true</isActive>
        <values>
            <fullName>In Progress</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Resolved%2FCompleted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Operations</fullName>
        <description>SFDC1-9677: New process for Sales Operations</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Ops</fullName>
        <description>New support process for sales ops team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned to HD Associate</fullName>
        </values>
        <values>
            <fullName>Entered Ticket</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Researching</fullName>
        </values>
        <values>
            <fullName>Resolved%2FCompleted</fullName>
        </values>
        <values>
            <fullName>Resolved%2FNo Response</fullName>
        </values>
        <values>
            <fullName>Waiting on Approvals</fullName>
        </values>
        <values>
            <fullName>Waiting on Info</fullName>
        </values>
        <values>
            <fullName>Waiting on Requester</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Support</fullName>
        <description>SFDC1-6009 Adding new support process for Sales Support</description>
        <isActive>true</isActive>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Resolved%2FCompleted</fullName>
        </values>
        <values>
            <fullName>Resolved%2FNo Response</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
        <values>
            <fullName>Waiting on Info</fullName>
        </values>
        <values>
            <fullName>Waiting on Requester</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce Help</fullName>
        <description>Main Case Record for Salesforce Help Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by Customer</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved by IHS Markit</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
        <values>
            <fullName>Waiting - Customer</fullName>
        </values>
        <values>
            <fullName>Waiting - Internal Team</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce Helpdesk</fullName>
        <description>SFDC1-8162 Main Case Record for Salesforce Helpdesk Cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active Waiting for info</fullName>
        </values>
        <values>
            <fullName>Closed - Canceled</fullName>
        </values>
        <values>
            <fullName>Closed - Moved to Jira</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Re-opened</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountCreated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-309 Lookup to account, this is the account that is created when the type/subtype is Data Governance/New account</description>
        <inlineHelpText>This value is required to close the ticket when the Subtype=New account</inlineHelpText>
        <label>Account Created/Associated</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Account Created)</relationshipLabel>
        <relationshipName>AccountCreatedCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>SFDC1-965 and SFDC1-683 Field to hold account name which will be used to create new Account</description>
        <inlineHelpText>Enter Account name for new Account creation through Case</inlineHelpText>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-309 Lookup to Accounts
SFDC1-8156: Relabeling related list label to &quot; Internal Cases&quot;</description>
        <inlineHelpText>Salesforce will populate when the case is spawned from an Account</inlineHelpText>
        <label>Account Reference</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Internal Cases</relationshipLabel>
        <relationshipName>AccountReferenceCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionTaken__c</fullName>
        <description>SFDC1-251 Determine how many cases involved actual changes versus  answering client questio.</description>
        <inlineHelpText>Please populate the field with the appropriate action taken.</inlineHelpText>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corrected Data</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>General Support</fullName>
                </value>
                <value>
                    <fullName>Cancelled Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdditionalFields__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-652 Required for the Additional Case Fields Setup</description>
        <inlineHelpText>Updated by Salesforce for certain Product Groups</inlineHelpText>
        <label>Additional Fields</label>
        <referenceTo>AdditionalCaseFields__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdditionalRejectionInformation__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Additional Rejection Information</inlineHelpText>
        <label>Additional Rejection Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <description>SFDC1-965 SFDC1-683 Account address field for new Account creation through Case</description>
        <inlineHelpText>Address field required for new Account creation through Case</inlineHelpText>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <description>SFDC1-965 SFDC1-683 Address field for new Account creation through Case</description>
        <inlineHelpText>Second Address field for new Account creation through Case</inlineHelpText>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignToQueue__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SFDC1-6629, This would be used to fire the assignment rule when Sales support case gets created by quick action.</description>
        <label>Assign to Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AuditedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-251 This field shows who audited the case</description>
        <inlineHelpText>Please populate this field with the user that audited the case if applicable.</inlineHelpText>
        <label>Audited By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuditedOn__c</fullName>
        <description>SFDC1-251 Signifies that the record has been audited.</description>
        <inlineHelpText>Please populate the date and time when this case was set to be audited.</inlineHelpText>
        <label>Audited On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AutoRenewalWithChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Auto-Renewal With Change</inlineHelpText>
        <label>Auto-Renewal With Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Auto-Renewal</inlineHelpText>
        <label>Auto-Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BSIMembership__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>BSI Membership #</inlineHelpText>
        <label>BSI Membership #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessArea__c</fullName>
        <description>SFDC1-8003 
SFDC helpdesk case business area.</description>
        <inlineHelpText>Please populate the business area that this case relates to.</inlineHelpText>
        <label>Business Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Analysis</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Heldesk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <description>SFDC1-88 Business Line of the case</description>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6009: Campaign Reference field holds Campaign Reference</description>
        <label>Campaign Reference</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-309 Lookup to Case</description>
        <inlineHelpText>This value will be populated when spawned from a case</inlineHelpText>
        <label>Case Reference</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases (Case Reference)</relationshipLabel>
        <relationshipName>CaseReferenceCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseResponsiblefromACF__c</fullName>
        <description>SFDC1-6586 This field will be used in an email template to populate the Case responsible on associated additional case field object. SFDC1-8278: Changing formula field to point to new Field</description>
        <formula>AdditionalFields__r.CaseResponsibleNew__r.FirstName + &quot; &quot; + AdditionalFields__r.CaseResponsibleNew__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Responsible from ACF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelPartnerBP__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Channel Partner BP #</inlineHelpText>
        <label>Channel Partner BP #</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelPartnerCompanyName__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Channel Partner Company Name</inlineHelpText>
        <label>Channel Partner Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckHoliday__c</fullName>
        <description>SFDC1-5154 This field helps calculate if current date falls under a holiday</description>
        <formula>IF(OR(AND(DAY(TODAY())=25,MONTH(TODAY())=12),AND(DAY(TODAY())=1,MONTH(TODAY())=1)),&quot;Please note that due to the holiday season that there may be a delay in responding to your request.&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckHoliday</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>SFDC1-965 SFDC1-683 City field for new Account creation through Case</description>
        <inlineHelpText>City for new Account creation through Case</inlineHelpText>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedReason__c</fullName>
        <description>SFDC1-251 Closed reason for when the case gets closed.</description>
        <inlineHelpText>Please populate the reason for case closure.</inlineHelpText>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completeness</fullName>
                </value>
                <value>
                    <fullName>Consistency</fullName>
                </value>
                <value>
                    <fullName>Correctness</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Customer Usage Error</fullName>
                </value>
                <value>
                    <fullName>Data Republished</fullName>
                </value>
                <value>
                    <fullName>Documentation Provided</fullName>
                </value>
                <value>
                    <fullName>Documentation Updated</fullName>
                </value>
                <value>
                    <fullName>Duplicates</fullName>
                </value>
                <value>
                    <fullName>Expected Behavior</fullName>
                </value>
                <value>
                    <fullName>Fixed in New Version</fullName>
                </value>
                <value>
                    <fullName>General Question</fullName>
                </value>
                <value>
                    <fullName>Incident Resolved</fullName>
                </value>
                <value>
                    <fullName>Issue on Client Side</fullName>
                </value>
                <value>
                    <fullName>Known Issue/Bug</fullName>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
                <value>
                    <fullName>Outage Resolved</fullName>
                </value>
                <value>
                    <fullName>Permissions Updated</fullName>
                </value>
                <value>
                    <fullName>Product Limitation</fullName>
                </value>
                <value>
                    <fullName>Query Answered</fullName>
                </value>
                <value>
                    <fullName>Referred to Sales</fullName>
                </value>
                <value>
                    <fullName>Resolution Steps Provided</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                </value>
                <value>
                    <fullName>Training Provided</fullName>
                </value>
                <value>
                    <fullName>Workaround Provided</fullName>
                </value>
                <value>
                    <fullName>Referred to Training</fullName>
                </value>
                <value>
                    <fullName>Data Corrected</fullName>
                </value>
                <value>
                    <fullName>Data Corrected.</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ComplianceRestrictions__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Compliance Restrictions</inlineHelpText>
        <label>Compliance Restrictions</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactAttempts__c</fullName>
        <description>SFDC1-88 Number of attempts made to contact</description>
        <label>Contact Attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactBL__c</fullName>
        <description>SFDC1-6009: This field contains Contact Business Line</description>
        <formula>$User.HRBusinessLine__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact BL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactCountryCode__c</fullName>
        <description>SFDC1-7970 hidden Country Code field from the Case Contact - being used in Convert to Lead quick action</description>
        <formula>TEXT(Contact.MailingCountryCode)</formula>
        <label>Contact Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <description>SFDC1-2650 : This field will hold the Contact Email from Contact, used in Email Templates.</description>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingAddress__c</fullName>
        <description>SFDC1-2650 : This field will hold the Contact Mailing Address from Contact, used in Email Templates.</description>
        <formula>Contact.MailingStreet + BR() + Contact.MailingCity + &apos;, &apos;  + Contact.MailingState + &apos; &apos; + Contact.MailingPostalCode + BR() + 
 Contact.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactManager__c</fullName>
        <description>SFDC1-6009: This field contains Contact Manager</description>
        <formula>$User.HRManager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <description>SFDC1-2650 : This field will hold the Contact Phone from Contact, used in Email Templates.</description>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6009: Contact Reference field holds contact reference</description>
        <label>Contact Reference</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactRegion__c</fullName>
        <description>SFDC1-6009: This field contains Contact Region</description>
        <formula>TEXT($User.UserRegion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactStateProvinceCode__c</fullName>
        <description>SFDC1-7970 hidden State/Province Code field from the Case Contact - being used in Convert to Lead quick action</description>
        <formula>TEXT(Contact.MailingStateCode)</formula>
        <label>Contact State/Province Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-251 A checkbox used to have the user confirm that the contact is an internal contact (contains @ihsmarkit.com email)
SFDC1- 7772 Checkbox should be unchecked</description>
        <inlineHelpText>Please tick this box if the associated contact is internal (Someone@IhsMarkit.com)</inlineHelpText>
        <label>Contact Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Contract End Date</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractOwnerRegion__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Contract Owner Region</inlineHelpText>
        <label>Contract Owner Region</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractProductList__c</fullName>
        <description>SFDC1-593 This field is concatenated list of Products from the list of Contracts</description>
        <label>Contract Product List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractRecordType__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Contract Record Type</inlineHelpText>
        <label>Contract Record Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6009: This field contains Contact Reference</description>
        <label>Contract Reference</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases (Contract Reference)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractStage__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Contract Stage</inlineHelpText>
        <label>Contract Stage</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Contract Start Date</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-88 This field represents SAP Contract Number(s)</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountOfAdditionalCaseFields__c</fullName>
        <description>SFDC1-652  Counting the number of Additional Case Fields related to the case. To prevent users from associating more than one product per case.</description>
        <inlineHelpText>Counting the number of Additional Case Fields related to the case. To prevent users from associating more than one product per case.</inlineHelpText>
        <label>CountOfAdditionalCaseFields</label>
        <summaryForeignKey>AdditionalCaseFields__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-965 &amp; SFDC1-638 Country field for new Account creation through Case</description>
        <inlineHelpText>Country for new Account creation through Case</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>